tests/fixtures/errors/view_move_take.z
# E0200: .take on a map view would move the payload out of the map's
# storage.
main: function is {
    m: (Map String value: String)
    m.set key: "a".string value: "x".string
    got: m.get key: "a".string
    match (
        got
    ) case some then {
        gone: got.take
        print gone
    } case none then {}
}
